manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react
  labels:
    name: react
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    name: redis
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
  labels:
    name: kube-prometheus-stack
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
