manifests/reference-grant.yml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: envoy-reference-grant
  namespace: react
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: v1
    kind: Service
    namespace: react
