manifests/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: react
spec:
  selector:
    app: python
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
