manifests/ciliumL3Policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule"
spec:
  endpointSelector:
    matchLabels:
      app: python-service
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: react
